lib/src/compiler/tests/testdata/errors/109.out
error[E029]: invalid escape sequence
 --> line:2:15
  |
2 |   condition: "\ޘabc" == "abc"
  |               ^^ invalid escape sequence `\ޘ`
  |